# rag-yt-bot

./: .gitignore  package-lock.json  package.json
apps/rag-pipeline/: main.py  pyproject.toml  server.py
apps/rag-pipeline/actions/: embed.py
apps/rag-pipeline/api/routes/: query.py  router.py
apps/rag-pipeline/utils/: chunk.py  transcript.py  translate.py
